# ai-nanny

./: .env.example  .gitignore  3_Minute_Pitch.md  AI_Nanny_Pitch.pptx  Interview_QA_Quick_Study.md  README.md  generate_presentation.py  ~$AI_Nanny_Pitch.pptx
Docs/: README.md  (+10 more)
ai-companion-orchestrator/: .dockerignore  .env  .env.bak  .env.example  Dockerfile  README.md  create_devices.py  docker-compose.yml  ingest_documents.py  pyproject.toml
ai-companion-orchestrator/api/: dependencies.py  main.py
ai-companion-orchestrator/api/routers/: admin.py  conversation.py  coordination.py  devices.py  health.py  knowledge.py  personas.py
ai-companion-orchestrator/api/schemas/: coordination.py  device.py  persona.py
ai-companion-orchestrator/core/: config.py  exceptions.py  local_store.py  logging_config.py
ai-companion-orchestrator/core/audio/: models.py  pipeline.py  stt.py  tts.py
ai-companion-orchestrator/core/conversation/: engine.py  models.py
ai-companion-orchestrator/core/coordination/: __init__.py  group_activity.py  handoff.py
ai-companion-orchestrator/core/device/: __init__.py  agent.py  models.py  registry.py
ai-companion-orchestrator/core/events/: __init__.py  bus.py
ai-companion-orchestrator/core/persona/: manager.py  models.py
ai-companion-orchestrator/core/rag/: __init__.py  engine.py  models.py
ai-companion-orchestrator/core/session/: manager.py  models.py
ai-companion-orchestrator/data/: activity.json  devices.json  knowledge.json
ai-companion-orchestrator/data/documents/: .gitkeep  activity_guidelines.md  communication_guidelines.md  (+5 more)
(+54 files in other folders)
